add java tuning opertion